# Kaminari-cpp

./: .gitignore  CMakeLists.txt  compile_commands.json  diff.patch  neovim.json  patch
cmake/: target_link_libraries_system.cmake
dep/: CMakeLists.txt
include/kaminari/: broadcaster.hpp  marshal_parse_state.hpp  super_packet.hpp  super_packet_reader.hpp
include/kaminari/addons/: peer_based_phase_sync.hpp  phase_sync.hpp  server_based_phase_sync.hpp
include/kaminari/buffers/: common.hpp  packet.hpp  packet_reader.hpp
include/kaminari/client/: basic_client.hpp  client.hpp
include/kaminari/cx/: overflow.hpp
include/kaminari/detail/: detail.hpp
include/kaminari/packers/: immediate_packer.hpp  merge_packer.hpp  most_recent_packer_by_opcode.hpp  most_recent_packer_with_id.hpp  ordered_packer.hpp  packer.hpp  unique_merge_packer.hpp  vector_merge_packer.hpp  vector_merge_with_priority_packer.hpp
include/kaminari/protocol/: basic_protocol.hpp  protocol.hpp
include/kaminari/queues/: unreliable_queue.hpp
include/kaminari/types/: data_wrapper.hpp
src/: CMakeLists.txt  super_packet_reader.cpp
src/addons/: peer_based_phase_sync.cpp  server_based_phase_sync.cpp
src/buffers/: packet.cpp  packet_reader.cpp
src/client/: basic_client.cpp
src/protocol/: basic_protocol.cpp
test/dep/: CMakeLists.txt
test/src/: CMakeLists.txt  test_queue_write_size.cpp
